--- a/ADS-503 Final Team Project.qmd
+++ b/ADS-503 Final Team Project.qmd
@@ -17,8 +17,12 @@ library(readr)
 library(knitr)
 library(DT)
 ```
+## Problem Statement
+Can subtle fluctuations in vocal biomarkers be used to predict early signs of motor symptom changes in Parkinson’s Disease patients, enabling timely clinical interventions?
 
-You can add options to executable code like this
+# Data Description
+
+The dataset used in this study is the Parkinson’s Telemonitoring dataset, which includes biomedical voice measurements from 42 individuals with PD. It contains 5,875 rows and multiple features extracted from voice recordings. The primary outcome variable is `motor_UPDRS`—a clinician-rated scale measuring motor function.
 
 ```{r}
 # Loading the data
@@ -29,10 +33,12 @@ data <- read.csv("C:/Users/annas/OneDrive/ADS-503 Final Team Project/parkinsons_
 names(data)
 dim(data)
 summary(data)
-```
+``
+`
+## Data Wrangling & Preprocessing
 
 ```{r}
-# Convert to factors (with correct column names)
+# Convert to factors 
 data$subject <- as.factor(data$`subject.`)
 data$sex <- as.factor(data$sex)
 ```
@@ -43,7 +49,7 @@ model_data <- data %>%
   select(-`subject.`, -test_time, -Jitter.DDP)
 ```
 
-## EDA: Correlation Matrix
+## Exploratory Data Analysis (EDA)
 
 ```{r}
 # Extract numeric columns safely
@@ -51,7 +57,7 @@ numeric_vars <- model_data[, sapply(model_data, is.numeric)]
 ```
 
 ```{r}
-# Compute and plot correlation matrix
+# Correlation Matrix
 cor_matrix <- cor(numeric_vars, use = "complete.obs")
 
 ggcorrplot(cor_matrix,
@@ -64,8 +70,6 @@ ggcorrplot(cor_matrix,
            title = "Correlation Matrix of Numeric Predictors",
            ggtheme = theme_minimal())
 ```
-
-## Correlation Matrix Insights
 
 The correlation matrix visualizes relationships between numeric voice-based biomarkers and the target variable (`motor_UPDRS`). Strong positive correlations (e.g., among shimmer and jitter features) indicate potential multicollinearity, which justifies the use of LASSO regularization. Additionally, `HNR` appears to be negatively correlated with shimmer features, revealing vocal clarity inversely related to motor symptoms.
 
@@ -106,7 +110,7 @@ This scatterplot shows the relationship between patient age and motor_UPDRS scor
 ggpairs(data[, c("motor_UPDRS", "age", "Jitter...", "Shimmer", "HNR")])
 ```
 
-### Pairwise Relationships Among Key Features
+# Pairwise Relationships Among Key Features
 
 The plot below visualizes pairwise relationships among selected predictors (`age`, `Jitter`, `Shimmer`, `HNR`) and the target variable (`motor_UPDRS`).
 
@@ -119,7 +123,6 @@ This plot supports the use of regularization techniques like LASSO to manage cor
 ## Data Splitting
 
 ```{r}
-# Split data into training and testing sets
 set.seed(42)
 trainIndex <- createDataPartition(model_data$motor_UPDRS, p = 0.8, list = FALSE)
 trainData <- model_data[trainIndex, ]
@@ -129,13 +132,15 @@ testData  <- model_data[-trainIndex, ]
 y_test <- testData$motor_UPDRS
 ```
 
-## LASSO Model
+## Model Building & Validation
+### LASSO Regression
 
 ```{r}
 # Prepare data for LASSO
-x_train <- model.matrix(motor_UPDRS ~ ., trainData)[,-1]
+x_train <- model.matrix(motor_UPDRS ~ ., data = trainData)[, -1]
 y_train <- trainData$motor_UPDRS
-x_test  <- model.matrix(motor_UPDRS ~ ., testData)[,-1]
+x_test <- model.matrix(motor_UPDRS ~ ., data = testData)[, -1]
+y_test <- testData$motor_UPDRS
 ```
 
 ```{r}
@@ -185,8 +190,6 @@ The LASSO regression model was trained using the `caret` package with 10-fold cr
 This suggests that the LASSO model was effective in capturing the relationship between voice-based biomarkers and motor impairment severity. The consistency in predictions across a range of impairment levels supports its potential use in early detection and remote monitoring of Parkinson’s symptoms.
 
 ```{r}
-library(ggplot2)
-
 ggplot(results_df, aes(x = True, y = Predicted)) +
   geom_point(alpha = 0.6, color = "skyblue") +
   geom_abline(slope = 1, intercept = 0, linetype = "dashed", color = "black") +
@@ -237,6 +240,24 @@ ggplot(data.frame(True = y_test, Predicted = pred_rf_ranger),
 ```
 
 ```{r}
+# Combine model performance results into a table
+results_df <- data.frame(
+  Model = c("LASSO (caret)", "Random Forest (ranger)"),
+  RMSE = c(round(lasso_caret_rmse, 4), round(rf_ranger_rmse, 4))
+)
+
+# Clean table for report
+kable(results_df, caption = "Model Comparison: RMSE Results")
+```
+
+```{r}
+ggplot(results_df, aes(x = Model, y = RMSE, fill = Model)) +
+  geom_col() +
+  theme_minimal() +
+  labs(title = "RMSE Comparison: LASSO vs Random Forest", y = "RMSE", x = "Model")
+```
+
+```{r}
 # Save Results
 results_df <- tibble(
   Model = c("LASSO", "Ranger RF"),
@@ -248,5 +269,16 @@ saveRDS(lasso_caret, "lasso_model.rds")
 saveRDS(rf_ranger, "rf_model.rds")
 saveRDS(testData, "test_data.rds")
 
-cat("✅ All tasks complete. Models and results exported.\n")
-```
+cat("All tasks complete. Models and results exported.\n")
+
+## Discussion and Final Model Selection
+The performance comparison between LASSO and Random Forest models reveals that the Random Forest algorithm significantly outperforms LASSO in predicting `motor_UPDRS` scores. Specifically, the Random Forest model achieved a Root Mean Squared Error (RMSE) of 0.3135, while the LASSO model resulted in an RMSE of 0.8800.
+
+These results indicate that:
+- The Random Forest model is better at capturing non-linear interactions and complex relationships between the vocal biomarkers and motor impairment severity.
+- The LASSO model, though less accurate, still provides interpretability and identifies a subset of influential features due to its regularization properties.
+
+Overall, the Random Forest model is selected as the final model for this project due to its superior predictive accuracy. Its strong performance suggests high potential for supporting remote monitoring and early intervention strategies in Parkinson’s disease management.
+
+
+
